# ccpp_ral

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
data/coverage_viewpoint_sets/: 16m_local_coverage.csv  2m_global_coverage.csv  2m_local_coverage.csv  4m_global_coverage.csv  4m_local_coverage.csv  8m_global_coverage.csv  8m_local_coverage.csv  coverage_16m_global_vp_set.csv  coverage_16m_local_vp_set.csv  coverage_2m_global_vp_set.csv  coverage_2m_local_vp_set.csv  coverage_4m_global_vp_set.csv  coverage_4m_local_vp_set.csv  coverage_8m_global_vp_set.csv  coverage_8m_local_vp_set.csv
data/model_convex/: 0_faces_normals.csv  10_faces_normals.csv  11_faces_normals.csv  12_faces_normals.csv  13_faces_normals.csv  14_faces_normals.csv  1_faces_normals.csv  2_faces_normals.csv  3_faces_normals.csv  4_faces_normals.csv  5_faces_normals.csv  6_faces_normals.csv  7_faces_normals.csv  8_faces_normals.csv  9_faces_normals.csv
data/model_original/: station.stl
data/model_remeshed/: 0_faces_normals.csv  1_faces_normals.csv  2_faces_normals.csv  3_faces_normals.csv  4_faces_normals.csv  5_faces_normals.csv  6_faces_normals.csv  7_faces_normals.csv  8_faces_normals.csv  9_faces_normals.csv
data/ordered_viewpoints/: 4m_local.csv  8m_global.csv
examples/: cube_example.cpp  evaluate_cw_coverage.cpp  evaluate_ordered_vp_cost.cpp  evaluate_path_coverage.cpp  evaluate_path_saturation.cpp  obj_converter.cpp  station_example.cpp  test_raytracing.cpp
include/: cost_matrix.hpp  cuda_kernels.h  iterative_ccp_optimizer.hpp  model.hpp  obs.hpp  rrtz.hpp  triangle_coverage_struct.hpp  triangle_struct.hpp  tsp.hpp  tsp_waypoint_struct.hpp  utils.hpp  vec3_struct.hpp  viewpoint_coverage_gain_struct.hpp  viewpoint_generator.hpp  viewpoint_struct.hpp
knot_ocp/: camera.py  casadi_opti_station.py  constraints.py  final_path_solve.py  initial_conditions.py  meshloader.py  obs.py  ode.py  ordered_viewpoint_path_length.py  package_path.py  pareto_front.py  pareto_grid.py  plot_solution.py  slew_rate.py  utils.py
knot_ocp/ccp_paths/: 2m_local.csv  8m_local.csv
knot_ocp/final_paths/face_oriented/: README.txt
knot_ocp/final_paths/ivt_10/: 16m_local.csv  2m_global.csv  4m_global.csv  8m_global.csv
knot_ocp/final_paths/ivt_50/: 16m_local.csv  2m_global.csv  2m_local.csv  4m_global.csv  4m_local.csv  8m_local.csv
knot_ocp/final_paths/ivt_ocp_matched/: 16m_global.csv  2m_global.csv  4m_global.csv  8m_local.csv
knot_ocp/final_paths/knot_oriented/: select_paths.py
knot_ocp/ivt_paths/10_min/: 16m_global_t.csv  16m_global_x_interp.csv  16m_local_t.csv  16m_local_x_interp.csv  2m_global_t.csv  2m_global_x_interp.csv  2m_local_t.csv  2m_local_x_interp.csv  4m_global_t.csv  4m_global_x_interp.csv  4m_local_t.csv  4m_local_x_interp.csv  8m_global_t.csv  8m_global_x_interp.csv  8m_local_t.csv  8m_local_x_interp.csv
knot_ocp/ivt_paths/50_min/: 16m_global_t.csv  16m_global_x_interp.csv  16m_local_t.csv  16m_local_x_interp.csv  2m_global_t.csv  2m_global_x_interp.csv  2m_local_t.csv  2m_local_x_interp.csv  4m_global_t.csv  4m_global_x_interp.csv  4m_local_t.csv  4m_local_x_interp.csv  8m_global_t.csv  8m_global_x_interp.csv  8m_local_t.csv  8m_local_x_interp.csv
knot_ocp/ivt_paths/ocp_matched/: 16m_global_t.csv  16m_global_x_interp.csv  16m_local_t.csv  16m_local_x_interp.csv  2m_global_t.csv  2m_global_x_interp.csv  2m_local_t.csv  2m_local_x_interp.csv  4m_global_t.csv  4m_global_x_interp.csv  4m_local_t.csv  4m_local_x_interp.csv  8m_global_t.csv  8m_global_x_interp.csv  8m_local_t.csv  8m_local_x_interp.csv
knot_ocp/ocp_paths/: flip_weights.py
knot_ocp/ocp_paths/16m_global/: k_100_0_f_1_0_U.csv  k_100_0_f_1_0_X.csv
knot_ocp/packaged_paths_fo/: select_paths.py
src/: cost_matrix.cpp  cuda_kernels.cu  iterative_ccp_optimizer.cpp  model.cpp  obs.cpp  rrtz.cpp  run_ccpp.cpp  station.cpp  test_path_collisions.cpp  tsp.cpp  utils.cpp  viewpoint_generator.cpp
visualization_python/: plot_hist.py  plotpath.py  saturation.py  saturation_coverage_analysis.py  station.py  utils.py
(+2858 files in other folders)
